Add initial portfolio website files including HTML structure, CSS styles, and normalize.css for consistent styling across browsers

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <code>https://yourusername.github.io/your-repo-name</code>
     <br>
     <a href="week-0/behavioral-layer/behavioral-layer.html">behavioral tutorial</a>
+    <a href="week-1/portfolio/index.html">Portfolio Site!</a>
   </main>
 
   <script src="scripts/main.js"></script>
