Add 'The Switch' project files including HTML, CSS, and JS for theme toggling functionality

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <a href="week-0/behavioral-layer/behavioral-layer.html">behavioral tutorial</a>
     <a href="week-1/portfolio/index.html">Portfolio Site!</a>
     <a href="week-1/story-teller/index.html">Story Teller</a>
+    <a href="week-1/the-switch/index.html">The Switch</a>
   </main>
 
   <script src="scripts/main.js"></script>
