--- a/week-1/portfolio/index.html
+++ b/week-1/portfolio/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio Webpage</title>
+    <link rel="stylesheet" href="css/variables.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -30,7 +31,11 @@
           </div>
         </nav>
 
-        <button class="theme-toggle">Toggle Theme</button>
+        <div class="theme-toggle-group">
+          <button class="theme-btn" data-theme-value="light" aria-label="Switch to light mode">Light</button>
+          <button class="theme-btn" data-theme-value="dark" aria-label="Switch to dark mode">Dark</button>
+          <button class="theme-btn" data-theme-value="system" aria-label="Switch to system mode">System</button>
+        </div>
 
         <section id="welcome-section">
           <div class="welcome-title">
